commented out android code commented out bouncy castle code added commons-codec library for base64 encode and decode